@@ -10,6 +10,7 @@
   - add mutex to protect against overlapping mount requests.
   - update return from mount request to give more sensible NSS_*
     values.
+- fix handling of autofs filesystem mount fail on init.
 
 23/5/2006 autofs-5.0.0_beta3
 ----------------------------
